--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,8 @@
 {
-    "printWidth": 120
+    "printWidth": 120,
+    "singleQuote": true,
+    "useTabs": false,
+    "tabWidth": 4,
+    "semi": true,
+    "bracketSpacing": true
 }
