launchSetting and readme update

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -3,6 +3,7 @@
   "profiles": {
     "api": {
       "commandName": "Project",
+      "hotReloadEnabled": false,
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
