--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.7",
+    "@angular/cdk": "^16.2.6",
     "@angular/common": "^16.2.7",
     "@angular/compiler": "^16.2.7",
     "@angular/core": "^16.2.7",
@@ -18,10 +19,10 @@
     "@angular/platform-browser": "^16.2.7",
     "@angular/platform-browser-dynamic": "^16.2.7",
     "@angular/router": "^16.2.7",
-    "@kolkov/ngx-gallery": "^2.0.1",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "ng-gallery": "^11.0.0",
     "ng2-file-upload": "5.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-spinner": "^16.0.2",
